🐛movie id misused

--- a/ml_prepro.ipynb
+++ b/ml_prepro.ipynb
@@ -1299,9 +1299,9 @@
     "    movie_list = hist['movieId'].tolist()\n",
     "    label_list = hist['rating'].tolist()\n",
     "    pos_list, neg_list = [], []\n",
-    "    for i, r in enumerate(label_list):\n",
-    "        if r == 1: pos_list.append(i);\n",
-    "        else: neg_list.append(i)\n",
+    "    for i, (v,r) in enumerate(zip(movie_list, label_list)):\n",
+    "        if r == 1: pos_list.append(v);\n",
+    "        else: neg_list.append(v)\n",
     "    \n",
     "    if len(pos_list) > len(neg_list):\n",
     "        for _ in range(len(pos_list)-len(neg_list)):\n",
